package Akali.Admin;

public class UserListController {
}
