package Akali.Resources;

public class Recording extends Resource {
    private String path;
    private double duration;
}
