
public class Consultant extends User{
	public void analyze() {
		
}
}
