package user;

public class Admin extends AbstractUser {
    public void analyze() {

    }
}

