package user;


public class Translator extends AbstractUser {
    private void analyze() {

    }

    private void translate() {//a big text field and a button to link the translated res to the non translated res

    }

    private void updateStatus() {

    }
}
