package common;

import javafx.fxml.FXML;
import javafx.scene.control.*;

public class ChangeUserController {
    @FXML
    private Label title;
    @FXML
    private TextField name;
    @FXML
    private TextField email;
    @FXML
    private TextField password;
    @FXML
    private TextField matricle;
    @FXML
    private ChoiceBox privilege;
    @FXML
    private Button save;
    @FXML
    private Button cancel;

    @FXML
    void HandleSave() {
    }

    @FXML
    void HandleBack() {
    }

    @FXML
    private void initialize() {
    }
}
