package translator;
//  https://stackoverflow.com/questions/29338352/create-filechooser-in-fxml

import javafx.fxml.FXML;
import javafx.scene.control.Button;
import javafx.scene.control.TextArea;
import javafx.scene.control.TextField;

import static logic.Browse.openFileChooser;

public class TranslateController {
    @FXML
    private Button browse;
    @FXML
    private Button download;
    @FXML
    private Button back;
    @FXML
    private Button submit;
    @FXML
    private TextField browsestate;
    @FXML
    private TextArea message;

    @FXML
    void handleBrowse() {
        openFileChooser(browsestate);
    }

    @FXML
    void handleSubmit() {
    }

    @FXML
    void handleBack() {
    }

    @FXML
    void handleDownload() {
    }
}
