@startuml

title __AKALI's Class Diagram__\n

  package  {
    package resource {
      abstract class AbstractResource {
      }
    }
  }
  

  package  {
    package user {
      abstract class AbstractUser {
      }
    }
  }
  

  package  {
    package manager {
      class AddController {
      }
    }
  }
  

  package  {
    package common {
      class AddUserController {
      }
    }
  }
  

  package  {
    package user {
      class Admin {
      }
    }
  }
  

  package  {
    package translator {
      class AmmendController {
      }
    }
  }
  

  package  {
    package Akali {
      class logic.Browse {
      }
    }
  }
  

  package  {
    package common {
      class ChangeUserController {
      }
    }
  }
  

  package  {
    package user {
      class Consultant {
      }
    }
  }
  

  package  {
    package user {
      class InfoManager {
      }
    }
  }
  

  package  {
    class Main {
    }
  }
  

  package  {
    package vistanavigator {
      class MainController {
      }
    }
  }
  

  package  {
    package manager {
      class ManageController {
      }
    }
  }
  

  package  {
    package manager {
      class ManageResourceController {
      }
    }
  }
  

  package  {
    package user {
      class Manager {
      }
    }
  }
  

  package  {
    package manager {
      class ManagerPendingController {
      }
    }
  }
  

  package  {
    package translator {
      class OngoingController {
      }
    }
  }
  

  package  {
    package resource {
      class Recording {
      }
    }
  }
  

  package  {
    package consultor {
      class SearchController {
      }
    }
  }
  

  package  {
    package consultor {
      class SearchResultsController {
      }
    }
  }
  

  package  {
    package resource {
      class Text {
      }
    }
  }
  

  package  {
    package translator {
      class TranslateController {
      }
    }
  }
  

  package  {
    package user {
      class Translator {
      }
    }
  }
  

  package  {
    package translator {
      class TranslatorPendingController {
      }
    }
  }
  

  package  {
    package admin {
      class UserListController {
      }
    }
  }
  

  package  {
    package Akali {
      class logic.UserLogic {
      }
    }
  }
  

  package  {
    package vistanavigator {
      class VistaNavigator {
      }
    }
  }
  

  Admin -up-|> AbstractUser
  Consultant -up-|> AbstractUser
  InfoManager -up-|> AbstractUser
  Main -up-|> Application
  Manager -up-|> AbstractUser
  Recording -up-|> AbstractResource
  Text -up-|> AbstractResource
  Translator -up-|> AbstractUser


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
